@@ -105,10 +105,11 @@ OBJECTS_TREE = {
         'PyoTableObject': sorted(['LinTable', 'NewTable', 'SndTable', 
                                   'HannTable', 'HarmTable', 'SawTable', 
                                   'ParaTable', 'LogTable', 'CosLogTable', 
-                                  'SquareTable', 'TriangleTable', 'ChebyTable', 'CosTable', 
-                                  'CurveTable', 'ExpTable', 'DataTable', 
-                                  'WinTable', 'SincTable', 'PartialTable', 
-                                  'AtanTable', 'PadSynthTable', 'SharedTable']),
+                                  'PulseTable', 'SquareTable', 'TriangleTable',
+                                  'ChebyTable', 'CosTable', 'CurveTable',
+                                  'ExpTable','DataTable', 'WinTable',
+                                  'SincTable', 'PartialTable', 'AtanTable',
+                                  'PadSynthTable', 'SharedTable']),
         'PyoPVObject' : sorted(['PVAnal', 'PVSynth', 'PVTranspose', 'PVVerb', 
                                 'PVGate', 'PVAddSynth', 'PVCross', 'PVMult',
                                 'PVMorph', 'PVFilter', 'PVDelay', 'PVBuffer', 
