@@ -1,3 +1,7 @@
+2020-02-23 DataTriny <datatriny@gmail.com>
+
+    * Added new object: PulseTable.
+
 2020-02-10 belangeo <belangeo@gmail.com>
 
     * Added new object: TriangleTable.
